# nanobody

./: .gitattributes  .gitignore  PROJECT_PROGRESS.md  README.md
code/downloaded_models/AlphaBind/alphabind/: pyproject.toml
code/downloaded_models/AlphaBind/alphabind/examples/: requirements.txt
code/downloaded_models/AlphaBind/alphabind/examples/finetuning_and_inference/: tutorial_1_finetuning_alphabind.ipynb
code/downloaded_models/AlphaBind/alphabind/examples/optimization/: tutorial_2_optimization_alphabind.ipynb
code/downloaded_models/AlphaBind/alphabind/src/alphabind/features/: build_features.py  featurize_using_esm_2.py
code/downloaded_models/AlphaBind/alphabind/src/alphabind/models/: dataset.py  ensemble.py  model.py  predict_model.py  train_model.py
data/: DATA_INVENTORY_DETAILED.md  PVRIG_VHH_SMALL_MODEL_PLAN.md  phase2_v2_2_top50_with_sequences.csv
docs/: LIGHTWEIGHT_SYNC_INVENTORY.md  LIGHTWEIGHT_SYNC_STATUS.md  PHASE_I_B_PLAN.md  PHASE_I_EXPLORATION.md  PHASE_I_PLAN.md  (+1 more)
tools/ab-data-validator/: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
tools/ab-data-validator/examples/: demo_failed_reasons.csv
tools/ab-data-validator/src/ab_data_validator/: anarci_runner.py  cdr.py  cli.py  input_loader.py  models.py  muscle.py  numbering.py  parallel.py  positive_library.py  report.py  similarity.py  summary.py  validation.py
tools/ab-data-validator/src/ab_data_validator.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
tools/ab-data-validator/src/ab_data_validator/data/: positive.csv
tools/ab-data-validator/tests/: __init__.py  test_cli.py  test_delivery_files.py  test_external_wrappers.py  test_input_loader.py  test_integration_external_tools.py  test_numbering_and_cdr.py  test_package.py  test_parallel.py  test_positive_library.py  test_report.py  test_similarity.py  test_validation.py  xlsx_utils.py
(+14344 files in other folders)
