[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-data-validator"
version = "0.1.0"
description = "Validate antibody Excel files with ANARCI numbering and CDR identity filtering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "clickmab-bio" }
]
dependencies = []

[project.scripts]
ab-data-validator = "ab_data_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ab_data_validator = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-m", "not integration"]
markers = [
  "integration: tests that require external ANARCI and MUSCLE executables",
]
